--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/ubuntu": "^0.1.0",
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-font": "^8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-shapes": "^0.1.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
@@ -33,5 +38,19 @@
     "@types/styled-components": "^5.1.1",
     "typescript": "~3.9.5"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "name": "Emprel Questionario",
+    "icon": "./src/assets/logo.png",
+    "version": "1.0.0",
+    "slug": "questionarios salvam vidas",
+    "ios": {
+      "bundleIdentifier": "com.joaoalves.emprelquestionario",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.joaoalves.emprelquestionario",
+      "versionCode": 1
+    }
+  }
 }
