--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "@types/react-native-datepicker": "^1.7.0",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-font": "^8.2.1",
@@ -29,6 +30,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-shapes": "^0.1.0",
     "react-native-web": "~0.11.7",
+    "react-native-windows": "^0.62.3",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
