--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-font": "^8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-status-bar": "^1.0.2",
+    "expo-updates": "~0.2.8",
+    "hyperline": "^1.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
